--- a/projects.html
+++ b/projects.html
@@ -198,7 +198,12 @@
                 <h1>Other Works + Resources</h1>
                 <div class="other-works-grid">
                     <div class="card">
-                        <img class="card-image" src="./images/projects/learnjava.jpg">
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/learnjava_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/learnjava_result.webp">
+                            <img loading="lazy" decode="async" alt="Image of java coffee to denote Java computer science programming language. Learn Java from Faith"
+                                 class="card-image" src="./images/projects/learnjava.jpg">
+                        </picture>
                         <div class="card-info">
                             <div class="card-text">
                                 <h2>Learn To Code in Java</h2>
@@ -215,8 +220,9 @@
                     </div>
                     <div class="card">
                         <picture>
-                            <source media="(max-width:600px)" srcset="./images/projects/smithiesincs_small.jpeg">
-                            <img class="card-image" src="./images/projects/smithiesincs.jpeg">
+                            <source media="(max-width:600px)" srcset="./images/projects/smithiesincs_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/smithiesincs_result.webp">
+                            <img loading="lazy" decode="async" alt="Faith teaching a HTML/CSS markup language for her computer science student organization" class="card-image" src="./images/projects/smithiesincs.jpeg">
                         </picture>
                         <div class="card-info">
                             <div class="card-text">
@@ -239,9 +245,9 @@
                     </div>
                     <div class="card">
                         <picture>
-                            <source media="(max-width:600px)" srcset="./images/projects/computerscienceta_small.png">
-                            <source media="(min-width:601px)" srcset="./images/projects/computerscienceta.png">
-                            <img class="card-image" src="./images/projects/computerscienceta.png">
+                            <source media="(max-width:600px)" srcset="./images/projects/computerscienceta_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/computerscienceta_result.webp">
+                            <img loading="lazy" decode="async" alt="Faith teaching Data Structures for her computer science teaching assistant class" class="card-image" src="./images/projects/computerscienceta.png">
                         </picture>
                         <div class="card-info">
                             <div class="card-text">
