adding smaller images

--- a/projects.html
+++ b/projects.html
@@ -164,14 +164,30 @@
                 <div>
                     <h2 class="project-year">2017</h2>
                     <div class="deathless-pictures">
-                        <img loading="lazy" decode="async" alt="Deathless main screen"
-                            src="./images/projects/deathlesscover_result.webp">
-                        <img loading="lazy" decode="async" alt="Gameplay of Deathless, a student-run video game"
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/deathlesscover_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/deathlesscover_result.webp">
+                            <img loading="lazy" decode="async" alt="Deathless main screen"
+                                src="./images/projects/deathlesscover_result.webp">
+                        </picture>
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/deathless_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/deathless_result.webp">
+                            <img loading="lazy" decode="async" alt="Gameplay of Deathless, a student-run video game"
                             src="./images/projects/deathless_result.webp">
-                        <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
-                            src="./images/projects/deathless2_result.webp">
-                        <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
+                        </picture>
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/deathless2_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/deathless2_result.webp">
+                            <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
+                                src="./images/projects/deathless2_result.webp">
+                        </picture>
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/deathless3_small_result.webp">
+                            <source media="(min-width:601px)" srcset="./images/projects/deathless3_result.webp">
+                            <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
                             src="./images/projects/deathless3_result.webp">
+                        </picture>
                     </div>
                 </div>
                 <div>
@@ -201,8 +217,9 @@
                         <picture>
                             <source media="(max-width:600px)" srcset="./images/projects/learnjava_small_result.webp">
                             <source media="(min-width:601px)" srcset="./images/projects/learnjava_result.webp">
-                            <img loading="lazy" decode="async" alt="Image of java coffee to denote Java computer science programming language. Learn Java from Faith"
-                                 class="card-image" src="./images/projects/learnjava.jpg">
+                            <img loading="lazy" decode="async"
+                                alt="Image of java coffee to denote Java computer science programming language. Learn Java from Faith"
+                                class="card-image" src="./images/projects/learnjava.jpg">
                         </picture>
                         <div class="card-info">
                             <div class="card-text">
@@ -222,7 +239,9 @@
                         <picture>
                             <source media="(max-width:600px)" srcset="./images/projects/smithiesincs_small_result.webp">
                             <source media="(min-width:601px)" srcset="./images/projects/smithiesincs_result.webp">
-                            <img loading="lazy" decode="async" alt="Faith teaching a HTML/CSS markup language for her computer science student organization" class="card-image" src="./images/projects/smithiesincs.jpeg">
+                            <img loading="lazy" decode="async"
+                                alt="Faith teaching a HTML/CSS markup language for her computer science student organization"
+                                class="card-image" src="./images/projects/smithiesincs.jpeg">
                         </picture>
                         <div class="card-info">
                             <div class="card-text">
@@ -245,9 +264,12 @@
                     </div>
                     <div class="card">
                         <picture>
-                            <source media="(max-width:600px)" srcset="./images/projects/computerscienceta_small_result.webp">
+                            <source media="(max-width:600px)"
+                                srcset="./images/projects/computerscienceta_small_result.webp">
                             <source media="(min-width:601px)" srcset="./images/projects/computerscienceta_result.webp">
-                            <img loading="lazy" decode="async" alt="Faith teaching Data Structures for her computer science teaching assistant class" class="card-image" src="./images/projects/computerscienceta.png">
+                            <img loading="lazy" decode="async"
+                                alt="Faith teaching Data Structures for her computer science teaching assistant class"
+                                class="card-image" src="./images/projects/computerscienceta.png">
                         </picture>
                         <div class="card-info">
                             <div class="card-text">
