--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                     </picture>
                 </div>
             </div>
-            <div class="projects-section description">
+            <div class="projects-section styled-font">
                 <div>
                     <h2 class="project-year">2021</h2>
                     <picture>
