--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
                 <a href="https://www.smith.edu/profile/faith-kim">
                     <div class="article">
                         <picture>
-                            <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp">
+                            <!-- <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp"> -->
                             <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
                                 src="./images/about/smitharticle.png">
                         </picture>
@@ -78,22 +78,25 @@
                 <a href="https://tinyurl.com/gaminglabatsmith">
                     <div class="article">
                         <picture>
-                            <source media="(max-width: 600px)"
+                            <!-- <source media="(max-width: 600px)"
                                 srcset="./images/about/gaminglabarticle_small_result.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp"> -->
                             <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
                                 srcset="./images/about/gaminglabarticle.png">
                         </picture>
-                        <p class="description">Learn more about the Gaming Lab at Smith College, where students can play
-                            video games from indie
-                            to AAA games!</p>
+                        <div>
+                            <p class="description">Learn more about the Gaming Lab at Smith College, where students can
+                                play
+                                video games from indie
+                                to AAA games!</p>
+                        </div>
                     </div>
                 </a>
                 <a href="https://reinvented-magazine.medium.com/women-who-reign-faith-kim-1360a26c5c3b">
                     <div class="article">
                         <picture>
-                            <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp">
+                            <!-- <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp"> -->
                             <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
                                 src="./images/about/reigningit.png">
                         </picture>
