--- a/projects.html
+++ b/projects.html
@@ -231,6 +231,14 @@
                                     at Smith College. I have made videos, slides, and github repo accessible for anyone
                                     interested in learning!
                                 </p>
+                                <p>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1GEXCP1B4UeeAeMQ7LBdKJdlqnhBg8PPI">Slides</a>
+                                    + <a href="https://www.youtube.com/channel/UCtnkT4J0XBRIIbAS74FFhyw">Videos</a>
+                                </p>
+                                <a href="https://github.com/faithkim97/JavaJterm2019">
+                                    <img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp"
+                                        alt="Social media to Github">
+                                </a>
                             </div>
                             <button class="read-more-btn">Read more</button>
                         </div>
@@ -282,6 +290,11 @@
                                     lecture videos were created to help students review lessons + notes they learned
                                     during
                                     class hours.
+                                </p>
+                                <p>
+                                    <a href="https://www.youtube.com/channel/UC7lg1jNJrOU9x6k7xi5hyWw">
+                                        Lecture videos
+                                    </a>
                                 </p>
                             </div>
                             <button class="read-more-btn">Read more</button>
