--- a/about.html
+++ b/about.html
@@ -1,126 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Faith</title>
-    <meta name="description" content="Learn more about Faith's experience as a software developer woman in tech">
-    <!-- Favicon -->
-    <link rel="icon" href="./images/faith-logo-small_result.webp" type="image/x-icon">
-    <link rel="stylesheet" href="./css/styles.css" </head>
-
-<body>
-    <link rel="preload" as="image" href="./images/about/profilepic_result.webp">
-    <link rel="preload" as="image" href="./images/about/profilepic_small_result.webp">
-    <div class="main-container fade">
-        <div class="heading">
-            <h1 class="typewriter">About Faith</h1>
-            <a href="index.html">
-                <img class="footer-icon" src="./images/homeicon.webp" loading="lazy" decode="async"
-                    alt="Return to home">
-            </a>
-        </div>
-        <div class="main-content">
-            <div class="description">
-                <p>Name: Faith Kim</p>
-                <p>Pronouns: She/her</p>
-                <p>Education: Smith College Class of 2019</p>
-                <a href="https://medium.com/@thefaithkim">
-                    Medium Blog
-                </a>
-                <p>
-                    Hi! My name is Faith, and I am a full stack software engineer
-                    with a background in backend. I graduated from Smith College in May 2019
-                    with a B.A. in Computer Science and a minor in Mathematics.
-                </p>
-                <p>
-                    I first started out using Java and Spring in my professional career,
-                    and now I'm using Django (Python) and ReactJS with Typescript in my day-to-day.
-                    I'm also interested in game development and have made games for school projects in the past.
-                </p>
-                <p>
-                    My true passion lies in mentorship for womxn of color in the tech industry.
-                    I have worked as the Vice President of Smith College's Computer Science organization,
-                    Smithies in CS, in hopes of creating a comfortable and inclusive space for students of
-                    all background to learn about tech and computer science. I hope to garner my skills
-                    and experience in the tech industry to offer more helpful resources to womxn in tech.
-                </p>
-            </div>
-            <div>
-                <picture class="float-right-picture">
-                    <source class="float-right-picture" media="(max-width: 600px)"
-                        srcset="./images/about/profilepic_small_result.webp">
-                    <source class="float-right-picture" media="(min-width: 601px)"
-                        srcset="./images/about/profilepic_result.webp">
-                    <img class="float-right-picture" aria-hidden="true" loading="lazy" decode="async"
-                        src="./images/about/profilepic.jpg" alt="Profile picture of Faith">
-                </picture>
-            </div>
-        </div>
-        <div id="featured-in">
-            <center>
-                <h1 class="typewriter">Featured In</h1>
-            </center>
-            <div class="articles">
-                <a href="https://www.smith.edu/profile/faith-kim">
-                    <div class="article">
-                        <picture>
-                            <!-- <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp"> -->
-                            <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
-                                src="./images/about/smitharticle.png">
-                        </picture>
-                        <p class="description">An article on Faith's life as a Smith College student</p>
-                    </div>
-                </a>
-                <a href="https://tinyurl.com/gaminglabatsmith">
-                    <div class="article">
-                        <picture>
-                            <!-- <source media="(max-width: 600px)"
-                                srcset="./images/about/gaminglabarticle_small_result.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp"> -->
-                            <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
-                                srcset="./images/about/gaminglabarticle.png">
-                        </picture>
-                        <div>
-                            <p class="description">Learn more about the Gaming Lab at Smith College, where students can
-                                play
-                                video games from indie
-                                to AAA games!</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://reinvented-magazine.medium.com/women-who-reign-faith-kim-1360a26c5c3b">
-                    <div class="article">
-                        <picture>
-                            <!-- <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
-                            <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp"> -->
-                            <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
-                                src="./images/about/reigningit.png">
-                        </picture>
-                        <p class="description">Learn more about Faith's journey into her earlier career in tech as a
-                            Computer Science student! </p>
-                    </div>
-                </a>
-            </div>
-            <!-- Footer -->
-            <div class="footer">
-                <div class="center-container">
-                    <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async"
-                            class="footer-icon" src="./images/linkedin_result.webp"
-                            alt="Social media to LinkedIn" /></a>
-                    <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async"
-                            class="footer-icon" src="./images/instagram_result.webp"
-                            alt="Social media to Instagram" /></a>
-                    <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
-                            src="./images/github_result.webp" alt="Social media to Github" /></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>About Faith</title><meta name="description" content="Learn more about Faith's experience as a software developer woman in tech"><link rel="icon" href="./images/faith-logo-small_result.webp" type="image/x-icon"><link rel="stylesheet" href="./css/styles.css" </head><body><link rel="preload" as="image" href="./images/about/profilepic_result.webp"><link rel="preload" as="image" href="./images/about/profilepic_small_result.webp"><div class="main-container fade"><div class="heading"><h1 class="typewriter">About Faith</h1><a href="index.html"><img class="footer-icon" src="./images/homeicon.webp" loading="lazy" decode="async" alt="Return to home"></a></div><div class="main-content"><div class="description"><p>Name: Faith Kim</p><p>Pronouns: She/her</p><p>Education: Smith College Class of 2019</p><a href="https://medium.com/@thefaithkim">Medium Blog </a><p>Hi! My name is Faith, and I am a full stack software engineer with a background in backend. I graduated from Smith College in May 2019 with a B.A. in Computer Science and a minor in Mathematics. </p><p>I first started out using Java and Spring in my professional career, and now I'm using Django (Python) and ReactJS with Typescript in my day-to-day. I'm also interested in game development and have made games for school projects in the past. </p><p>My true passion lies in mentorship for womxn of color in the tech industry. I have worked as the Vice President of Smith College's Computer Science organization, Smithies in CS, in hopes of creating a comfortable and inclusive space for students of all background to learn about tech and computer science. I hope to garner my skills and experience in the tech industry to offer more helpful resources to womxn in tech. </p></div><div><picture class="float-right-picture"><source class="float-right-picture" media="(max-width: 600px)" srcset="./images/about/profilepic_small_result.webp"><source class="float-right-picture" media="(min-width: 601px)" srcset="./images/about/profilepic_result.webp"><img class="float-right-picture" aria-hidden="true" loading="lazy" decode="async" src="./images/about/profilepic.jpg" alt="Profile picture of Faith"></picture></div></div><div id="featured-in"><center><h1 class="typewriter">Featured In</h1></center><div class="articles"><a href="https://www.smith.edu/profile/faith-kim"><div class="article"><picture><img alt="Smith College article on Faith Kim" loading="lazy" decode="async" src="./images/about/smitharticle.png"></picture><p class="description">An article on Faith's life as a Smith College student</p></div></a><a href="https://tinyurl.com/gaminglabatsmith"><div class="article"><picture><img alt="Article on Smith College video game lab" loading="lazy" decode="async" srcset="./images/about/gaminglabarticle.png"></picture><div><p class="description">Learn more about the Gaming Lab at Smith College, where students can play video games from indie to AAA games!</p></div></div></a><a href="https://reinvented-magazine.medium.com/women-who-reign-faith-kim-1360a26c5c3b"><div class="article"><picture><img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async" src="./images/about/reigningit.png"></picture><p class="description">Learn more about Faith's journey into her earlier career in tech as a Computer Science student! </p></div></a></div><div class="footer"><div class="center-container"><a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon" src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a><a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon" src="./images/instagram_result.webp" alt="Social media to Instagram" /></a><a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp" alt="Social media to Github" /></a></div></div></div></div></div></body></html>
